--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,6 @@
 {
   "require": {
     "php-curl-class/php-curl-class": "2.0.0",
-    "keradus/psr4autoloader": "v2.0.1",
-    "apache/log4php": "3.x-dev",
-    "hipchat/hipchat-php": "v1.3"
+    "keradus/psr4autoloader": "v2.0.1"
   }
 }
