Added option to select if roommates should be notified about message + removed hardcoded ProCreative room name

--- a/src/configuration.ini
+++ b/src/configuration.ini
@@ -4,6 +4,7 @@ message = "Szalom! Dzisiejszy kurs dolara to %sPLN! Miłego kręcenia pejsów."
 color=Yellow
 token=
 room=ProCreative
+notify = true
 [currency]
 from=USD
 to=PLN
