Updated exchange rates provider.

--- a/src/configuration.ini
+++ b/src/configuration.ini
@@ -1,10 +1,11 @@
 [main]
-message = "Szalom! Dzisiejszy kurs dolara to %sPLN! Miłego kręcenia pejsów."
+message = "Szalom! Dzisiejszy kurs dolara to <b>%s PLN</b>! Miłego kręcenia pejsów."
 [hipchat]
-color=Yellow
-token=
-room=ProCreative
+color = Yellow
+token =
+room = ProCreative
 notify = true
 [currency]
-from=USD
-to=PLN
+apikey =
+from = USD
+to = PLN
